fix issue with past/future vertical slides remaining visible in Safari 15.4 (closes #3164)

--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -723,6 +723,8 @@ $controlsArrowAngleActive: 36deg;
 
 .reveal .slides>section.past,
 .reveal .slides>section.future,
+.reveal .slides>section.past>section,
+.reveal .slides>section.future>section,
 .reveal .slides>section>section.past,
 .reveal .slides>section>section.future {
 	opacity: 0;
